force-app/main/default/objects/Thankyou_Page__c/Thankyou_Page__c.object-meta.xml
<CustomObject>
    <label>Thankyou Page</label>
    <nameField>
        <label>Thankyou Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thankyou Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>