force-app/main/default/objects/Thankyou_Page__c/fields/See_Response__c.field-meta.xml
<CustomField>
    <fullName>See_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>See Response</label>
    <type>Checkbox</type>
</CustomField>