force-app/main/default/objects/Thankyou_Page__c/fields/Thank_you_URL__c.field-meta.xml
<CustomField>
    <fullName>Thank_you_URL__c</fullName>
    <label>Thank you URL</label>
    <type>Url</type>
</CustomField>