force-app/main/default/objects/Thankyou_Page__c/fields/ThankYou_Label__c.field-meta.xml
<CustomField>
    <fullName>ThankYou_Label__c</fullName>
    <label>ThankYou_Label</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>