force-app/main/default/objects/Thankyou_Page__c/fields/Thankyou_Page_Type__c.field-meta.xml
<CustomField>
    <fullName>Thankyou_Page_Type__c</fullName>
    <label>Thankyou Page Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Show Text</fullName>
            </value>
            <value>
                <fullName>Redirect to a webpage</fullName>
            </value>
            <value>
                <fullName>Show text, then redirect to web page</fullName>
            </value>
            <value>
                <fullName>Show report of User data</fullName>
            </value>
            <value>
                <fullName>Show HTML block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>