force-app/main/default/objects/Thankyou_Page__c/fields/Thankyou_Text__c.field-meta.xml
<CustomField>
    <fullName>Thankyou_Text__c</fullName>
    <label>Thankyou Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>