force-app/main/default/objects/Thankyou_Page__c/recordTypes/thankyou.recordType-meta.xml
<RecordType>
    <fullName>thankyou</fullName>
    <active>true</active>
    <label>thankyou</label>
</RecordType>